@@ -1,5 +1,34 @@
 <h2>Help</h2>
 
+<h3>Quick start</h3>
+
+<ol>
+  
+  <li>Create a local directory "test_category".</li>
+
+  <li>Copy pictures in "test_category".</li>
+
+  <li>Open an FTP connection to this remote gallery.</li>
+
+  <li>Upload local directory "test_category" into your remote directory
+  names "galleries". Set authorizations to 777 on directory
+  "galleries/test_category".</li>
+
+  <li>Connect to your PhpWebGallery as an admin.</li>
+
+  <li>Go to <span class="pwgScreen">Administration, Pictures,
+  Thumbnails</span>. PhpWebGallery find the picture from "test_category"
+  without thumbnails. Ask to create thumbnails.</li>
+
+  <li>Go to <span class="pwgScreen">Administration, General,
+  Synchronize</span>. Check "directories + files" option, uncheck "only
+  perform a simulation" and submit the synchronization.</li>
+
+  <li>Job's done. You've created a category "test_category" at the root of
+your gallery.</li>
+  
+</ol>
+
 <h3>Adding elements</h3>
 
 <ul>
